{{$NEXT}}

0.3.1     2014-01-07 17:32:20 Europe/Berlin

  - Pluginbundle should finally work and this module should get indexed

0.3.0     2014-01-07 16:59:41 Europe/Berlin
  
  - Check environment for installed programs (rudimentrily)

0.2.4     2014-01-07 16:50:50 Europe/Berlin

  - "funny characters" in ditaa work

0.2.3     2014-01-07 16:46:26 Europe/Berlin

  - code blocks can appear in lists, too

0.2.2     2014-01-07 16:39:38 Europe/Berlin

  - Add check for ditaa executable

0.2.1     2014-01-06 13:01:48 Europe/Berlin

  - Add moo

0.2.0     2014-01-05 13:00:48 Europe/Berlin

  - Change everything to Moo

0.1.0_1   2014-01-04 11:14:14 Europe/Berlin

  - First alpha release