@@ -1,13 +1,16 @@
 name             = App-pandoc-preprocess
 author           = DBR <dbr@cpan.org>
-license          = Perl_5
+license          = WTFPL_2
 copyright_holder = DBR
 copyright_year   = 2014
 
-main_module      = lib/App/pandoc/preprocess.pm
+main_module      = bin/ppp
 
-version          = 0.3.1
+version          = 0.4.0
 
 [@Author::DBR]
+; [Test::Version]
+; is_strict   = 0
+; has_version = 1
 [ReadmeFromPod]
-filename = bin/ppp
+filename = lib/App/pandoc/preprocess.pm
