@@ -3,128 +3,47 @@ package App::pandoc::preprocess;
 #  PODNAME: App::pandoc::preprocess
 # ABSTRACT: Preprocess Pandoc before Processing Pandoc
 
-use v5.14;
-use strict;
-use warnings;
+=begin wikidoc
 
-use Moo;
-use MooX::Options;
-use MooX::Types::MooseLike::Base qw| :all |;
+= ppp - pandoc pre-process
 
-use Data::Printer;
+= USAGE
 
-use App::pandoc::preprocess::File;
-use App::pandoc::preprocess::Checks;
+cat chapters/input-*.pandoc | ppp | pandoc -o output.pdf --smart [more pandoc options...]
 
-option inputfiles => (
-  is => 'ro',
-  isa => ArrayRef[Str],
-  # repeatable => 1,
-  required => 1,
-  format => 's@',
-);
+= BACKGROUND
 
-option output_directory => (
-  is => 'rw',
-  isa => Str,
-  format => 's',
-  default => sub { '.' },
-  doc => 'directory to write image files to',
-);
+* much simpler design than version 1: pipeable & chainable, reading line-by-line
+* parallelized work on image file creation
 
-option downscale_image => (
-  is => 'rw',
-  isa => Bool,
-  default => 1,
-  doc => 'downscale the image',
-);
+== How it works
 
-has encoding_check => (
-  is => 'ro',
-  isa => Num,
-  default => sub {
-    `grep -c file.encoding \$(which ditaa)` > 0 or die q{
-      Your ditaa executable
-        a) could not be found in your $PATH or
-        b) it lacks an option called '-Dfile.encoding=UTF-8' or
-        c) your\'re lacking java altogehter
+1. while-loop will iterate line by line and is using the flip-flop-operator:
+    * as soon, as a ditaa/rdfdot/dot-block starts,
+      globals ($fileno, $outfile, etc) are set, so all other routines can see them
+    * when actually *inside* the block, the block's contents are printed
+      to the newly generated file (image-X.(ditaa/rdfdot/dot))
+2. once the flip-flop-operator hits the end of the ditaa/rdfdot/dot-block,
+a child will be spawned to take over the actual ditaa/rdfdot/dot-process
+to create the png-file and the globals are reset
 
-      Please add an executable called `ditaa` with the following content to your $PATH:
-        #!/bin/sh
-        java -Dfile.encoding=UTF-8 -jar /path/to/ditaa_XYZ.jar
+3. all other lines which are not part of a ditaa/rdfdot/dot-block will simply
+be piped through to stdout
 
-      Abort.
-    }
-  }
-);
+4. at the end of the program, all children are waited for
 
-has preprocess_file => (
-  is => 'rw',
-  isa => Object #'App::pandoc::preprocess::File',
-);
+5. in the meantime, the new pandoc contents are printed to stdout
 
-has matchers => (
-  is => 'ro',
-  isa => HashRef[RegexpRef],
-  default => sub {
-    +{
-      begin_of_line          => qr/^/sm,
-      codeblock_begin        => qr/~{4,}/sm,
-      codeblock_content      => qr/.*?/sm,
-      codeblock_end          => qr/~{4,}/sm,
-      format_specification   => qr/(?:dot|ditaa|rdfdot)/sm,
-      random_stuff_nongreedy => qr/.*?/sm,
-      possibly_spaces        => qr/\s*/sm,
-    }
-  }
-);
+6. all child-processes will remain quiert as far as stdout is concerned and
+write to their individual log-files
 
-has matcher => (
-  is => 'lazy',
-  isa => RegexpRef,
-);
+== Todo
 
-sub _build_matcher {
-  my $self = shift;
-  # This is a bit ugly, since we have to
-  # use the @{[]}-"tutle operator" everywhere...
-  my $qr =  qr/
-    (?<MATCH>
-      @{[$self->matchers->{codeblock_begin}]} @{[$self->matchers->{possibly_spaces}]} \{
-        @{[$self->matchers->{random_stuff_nongreedy}]}
-        \.(?<format> @{[$self->matchers->{format_specification}]} )
-        @{[$self->matchers->{random_stuff_nongreedy}]}
-      \}
-      @{[$self->matchers->{random_stuff_nongreedy}]}
-      (?<content> @{[$self->matchers->{codeblock_content}]} )
-      @{[$self->matchers->{codeblock_end}]}
-    )
-  /x;
-}
+* Captions
+* Checks whether ditaa... are available
+* check whether ditaa has file.encoding set
+* bundle ditaa with this
 
-sub slurp_file {
-  my $self = shift;
-  return $_ = do { local (@ARGV, $/) = @{$self->inputfiles}; <> };
-}
+=end wikidoc
 
-sub generator { # needs to return the include line for pandoc
-  my $self = shift;
-  my ($format, $content) = @_;
-  my $file = App::pandoc::preprocess::File->new(
-    current_format => $format,
-    content => $content,
-    output_directory => $self->output_directory,
-    downscale_image => 1,
-  );
-  $file->current_image_include;
-}
-
-sub run {
-  my $self = shift;
-  $_ = $self->slurp_file;           # get (whole) STDIN/File(s) into $_
-  my $matcher = $self->matcher;     # $matcher will set $+{format} and $+{content}
-  s/$matcher/$self->generator( $+{format} => $+{content} )/posixgems; # transmute $_ and (as a side-effect) write image files
-  say $_                            # you will have to output modified $_ to STDOUT again
-}
-
-1;
+'make CPAN happy -- we only have a main in bin/ppp'
