@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+  - Refactor/Rewrite: Use flip-flop operator, major simplifications
+
 0.3.1     2014-01-07 17:32:20 Europe/Berlin
 
   - Pluginbundle should finally work and this module should get indexed
